--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <p>A modern web-based eye tracking application for visual acuity testing – designed for preverbal children and individuals with communication difficulties.</p>
   
   <div class="links">
-    <a href="https://github.com/your-username/mira-app" class="btn">🔗 View Code</a>
-    <a href="https://your-deployed-link.com" class="btn">🚀 Live Demo</a>
+    <a href="https://github.com/your-username/mira-app" class="btn">View Code</a>
+    <a href="https://www.youtube.com/watch?v=_lZflg5-ZX4&ab_channel=Fr%C3%A9d%C3%A9ricIglesias" class="btn">Live Demo</a>
     <a href="MIRA_Final_README.md" class="btn">📄 ReadMe</a>
   </div>
 
