--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </div>
 
   <section id="features">
-    <h2>✨ Key Features</h2>
+    <h2>Key Features</h2>
     <div class="features">
       <div class="feature">
         <img src="https://via.placeholder.com/400x200?text=Eye+Tracking" alt="Eye Tracking" />
@@ -134,7 +134,7 @@
   </section>
 
   <section id="about">
-    <h2>👁️ About the Project</h2>
+    <h2>About the Project</h2>
     <p>
       Project Mira was inspired by the need for objective, non-verbal visual testing — especially for preverbal children or individuals with communication challenges.
       Rather than relying on patient feedback, Mira uses direct eye movement analysis to perform accurate visual acuity tests via the web.
@@ -144,19 +144,17 @@
       <a href="https://github.com/YOUR_USERNAME/mira-app" target="_blank">GitHub</a>.
     </p>
 
-    <h3>👤 Team</h3>
+    <h3>Team</h3>
     <ul>
       <li>
         <strong>Frédéric Iglesias Montero</strong> —
-        <a class="social" href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a> |
-        <a class="social" href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a> |
-        <a class="social" href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
+        <a class="social" href="https://github.com/Khosuke" target="_blank">GitHub</a> |
+        <a class="social" href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-iglesias-montero-39b864359/" target="_blank">LinkedIn</a> |
       </li>
       <li>
         <strong>Luke Holley-Boutillier</strong> —
-        <a class="social" href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a> |
-        <a class="social" href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a> |
-        <a class="social" href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a>
+        <a class="social" href="https://github.com/SpacePistache" target="_blank">GitHub</a> |
+        <a class="social" href="https://www.linkedin.com/in/luke-holley-boutillier-b84864197/" target="_blank">LinkedIn</a> |
       </li>
     </ul>
   </section>
@@ -167,4 +165,3 @@
 
 </body>
 </html>
-<!-- redeploy trigger -->
