--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </section>
 
   <footer>
-    © 2025 Mira App · Holberton School Project
+    © 2025 Mira App · Made with love and caffeine by Fred and Luke
   </footer>
 
 </body>
