Add new images and update landing page layout and content

--- a/index.html
+++ b/index.html
@@ -1,167 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mira App</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mira App</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: system-ui, sans-serif;
+            background-color: #f9f9f9;
+            color: #333;
+        }
 
-    header {
-      background-color: #0e7490;
-      color: white;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-    }
+        header {
+            background-color: #0e7490;
+            color: white;
+            padding: 1rem 2rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            position: sticky;
+            top: 0;
+        }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin-left: 1rem;
-    }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin-left: 1rem;
+        }
 
-    .cover {
-      background: url('https://via.placeholder.com/1600x500?text=Mira+App') center/cover no-repeat;
-      height: 400px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      text-shadow: 1px 1px 4px black;
-    }
+        .cover {
+            background: url('/coverimage.png') center/cover no-repeat;
+            height: 450px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            text-shadow: 1px 1px 4px black;
+            padding: 2rem;
+            text-align: center;
+        }
 
-    .cover h1 {
-      font-size: 3rem;
-    }
+        .cover h1 {
+            font-size: 3rem;
+        }
 
-    .cover p {
-      font-size: 1.25rem;
-    }
+        .cover p {
+            font-size: 1.25rem;
+        }
 
-    .btn {
-      background-color: #0e7490;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      margin-top: 1rem;
-    }
+        .btn {
+            background-color: #0e7490;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-top: 1rem;
+        }
 
-    section {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-    }
+        section {
+            padding: 2rem;
+            max-width: 900px;
+            margin: auto;
+        }
 
-    .features {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-    }
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2rem;
+        }
 
-    .feature {
-      flex: 1 1 250px;
-      background-color: white;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
+        .feature {
+            flex: 1 1 250px;
+            background-color: white;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+        }
 
-    .feature img {
-      width: 100%;
-      border-radius: 5px;
-    }
+        .feature img {
+            width: 100%;
+            border-radius: 5px;
+        }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      color: #777;
-    }
+        footer {
+            text-align: center;
+            padding: 2rem;
+            font-size: 0.9rem;
+            color: #777;
+        }
 
-    a.social {
-      margin: 0 0.5rem;
-    }
-  </style>
+        a.social {
+            margin: 0 0.5rem;
+        }
+    </style>
 </head>
+
 <body>
 
-  <header>
-    <strong>Mira App</strong>
-    <nav>
-      <a href="#features">Features</a>
-      <a href="#about">About</a>
-      <a href="https://github.com/YOUR_USERNAME/mira-app" target="_blank">GitHub</a>
-    </nav>
-  </header>
+    <header>
+        <strong>Mira App</strong>
+        <nav>
+            <a href="#features">Features</a>
+            <a href="#about">About</a>
+            <a href="https://github.com/YOUR_USERNAME/mira-app" target="_blank">GitHub</a>
+        </nav>
+    </header>
 
-  <div class="cover">
-    <h1>Mira App</h1>
-    <p>Accessible, eye-tracking-based vision testing — no words required.</p>
-    <a class="btn" href="https://YOUR_DEPLOYED_LINK" target="_blank">Launch App</a>
-  </div>
-
-  <section id="features">
-    <h2>Key Features</h2>
-    <div class="features">
-      <div class="feature">
-        <img src="https://via.placeholder.com/400x200?text=Eye+Tracking" alt="Eye Tracking" />
-        <h3>WebGazer.js Eye Tracking</h3>
-        <p>Real-time, in-browser eye movement tracking calibrated for clinical-grade visual tests.</p>
-      </div>
-      <div class="feature">
-        <img src="https://via.placeholder.com/400x200?text=Calibration" alt="Calibration" />
-        <h3>Custom Calibration</h3>
-        <p>9-point per-eye calibration saved to user profiles to speed up clinical use.</p>
-      </div>
-      <div class="feature">
-        <img src="https://via.placeholder.com/400x200?text=Results" alt="Results" />
-        <h3>Session & Result Management</h3>
-        <p>Track, store, and export patient session data securely — with backend PDF support.</p>
-      </div>
+    <div class="cover">
+        <h1>Mira App</h1>
+        <p>Accessible, eye-tracking-based vision testing — no words required.</p>
+        <a class="btn" href="http://127.0.0.1:5173/" target="_blank">Launch App</a>
     </div>
-  </section>
 
-  <section id="about">
-    <h2>About the Project</h2>
-    <p>
-      Project Mira was inspired by the need for objective, non-verbal visual testing — especially for preverbal children or individuals with communication challenges.
-      Rather than relying on patient feedback, Mira uses direct eye movement analysis to perform accurate visual acuity tests via the web.
-    </p>
-    <p>
-      Built as part of the Holberton School Portfolio Project. See full source on
-      <a href="https://github.com/YOUR_USERNAME/mira-app" target="_blank">GitHub</a>.
-    </p>
+    <section id="features">
+        <h2>Key Features</h2>
+        <div class="features">
+            <div class="feature">
+                <img src="/eyetracker.png" alt="Eye Tracking" />
+                <h3>WebGazer.js Eye Tracking</h3>
+                <p>Real-time, in-browser eye movement tracking calibrated for clinical-grade visual tests.</p>
+            </div>
+            <div class="feature">
+                <img src="/calibration.png" alt="Calibration" />
+                <h3>Custom Calibration</h3>
+                <p>9-point per-eye calibration saved to user profiles to speed up clinical use.</p>
+            </div>
+            <div class="feature">
+                <img src="/results.png" alt="Results" />
+                <h3>Session & Result Management</h3>
+                <p>Track, store, and export patient session data securely — with backend PDF support.</p>
+            </div>
+        </div>
+    </section>
+    <iframe width="864" height="486" src="https://www.youtube.com/embed/_lZflg5-ZX4" title="Demo Project Mira - Juillet 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section id="about">
+        <h2>About the Project</h2>
+        <p>
+            Project Mira was inspired by the need for objective, non-verbal visual testing — especially for preverbal
+            children or individuals with communication challenges.
+            Rather than relying on patient feedback, Mira uses direct eye movement analysis to perform accurate visual
+            acuity tests via the web.
+        </p>
+        <p>
+            Built as part of the Holberton School Portfolio Project. See full source on
+            <a href="https://github.com/YOUR_USERNAME/mira-app" target="_blank">GitHub</a>.
+        </p>
 
-    <h3>Team</h3>
-    <ul>
-      <li>
-        <strong>Frédéric Iglesias Montero</strong> —
-        <a class="social" href="https://github.com/Khosuke" target="_blank">GitHub</a> |
-        <a class="social" href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-iglesias-montero-39b864359/" target="_blank">LinkedIn</a> |
-      </li>
-      <li>
-        <strong>Luke Holley-Boutillier</strong> —
-        <a class="social" href="https://github.com/SpacePistache" target="_blank">GitHub</a> |
-        <a class="social" href="https://www.linkedin.com/in/luke-holley-boutillier-b84864197/" target="_blank">LinkedIn</a> |
-      </li>
-    </ul>
-  </section>
+        <h3>Team</h3>
+        <ul>
+            <li>
+                <strong>Frédéric Iglesias Montero</strong> —
+                <a class="social" href="https://github.com/Khosuke" target="_blank">GitHub</a> |
+                <a class="social" href="https://www.linkedin.com/in/fr%C3%A9d%C3%A9ric-iglesias-montero-39b864359/"
+                    target="_blank">LinkedIn</a> |
+            </li>
+            <li>
+                <strong>Luke Holley-Boutillier</strong> —
+                <a class="social" href="https://github.com/SpacePistache" target="_blank">GitHub</a> |
+                <a class="social" href="https://www.linkedin.com/in/luke-holley-boutillier-b84864197/"
+                    target="_blank">LinkedIn</a> |
+            </li>
+        </ul>
+    </section>
 
-  <footer>
-    © 2025 Mira App · Made with love and caffeine by Fred and Luke
-  </footer>
+    <footer>
+        © 2025 Mira App · Made with love and caffeine by Fred and Luke
+    </footer>
 
 </body>
+
 </html>
