cover iamge fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
 
         .cover {
-            background: url('coverimage.png') center/cover no-repeat;
+            background: url('./coverimage.png') center/cover no-repeat;
             height: 450px;
             display: flex;
             flex-direction: column;
