--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
         }
 
         .cover {
-            background: url('./coverimage.png') center/cover no-repeat;
+            background: url('/Mira-Landing-Page/coverimage.png') center/cover no-repeat;
             height: 450px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: white;
             text-shadow: 1px 1px 4px black;
             padding: 2rem;
             text-align: center;
