--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         }
 
         .cover {
-            background: url('/Mira-Landing-Page/coverimage.png') center/cover no-repeat;
+            background: url('/Mira-Landing-Page/coverimage.jpg') center/cover no-repeat;
             height: 450px;
             display: flex;
             flex-direction: column;
