--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         }
 
         .cover {
-            background: url('/Mira-Landing-Page/coverimage.jpg') center/cover no-repeat;
+            background-image: url('./coverimage.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             height: 450px;
             display: flex;
             flex-direction: column;
