--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            text-shadow: 1px 1px 4px black;
+            text-shadow: 1px 1px 4px rgb(245, 239, 239);
             padding: 2rem;
             text-align: center;
         }
